// ipc is used for inter-process communication between the different
// services.
// This file should eventually obsolete the ones in the `realtime` directory

syntax = "proto3";
package liwords;
option go_package = "github.com/domino14/liwords/rpc/api/proto/ipc";

enum MessageType {
  SEEK_REQUEST = 0;
  CLIENT_GAMEPLAY_EVENT = 3;
  SERVER_GAMEPLAY_EVENT = 4;
  GAME_ENDED_EVENT = 5;
  GAME_HISTORY_REFRESHER = 6;
  NEW_GAME_EVENT = 8;
  SERVER_CHALLENGE_RESULT_EVENT = 9;
  ONGOING_GAMES = 14;
  READY_FOR_GAME = 25;
  GAME_META_EVENT = 42;
}
