syntax = "proto3";
package liwords;
option go_package = "github.com/domino14/liwords/rpc/api/proto/realtime";

// realtime contains the data structures and services needed for the actual
// gameplay. Since gameplay is intended to happen over a full-duplex connection,
// we will not be auto-generating service code; it is here for documentation
// purposes.

import "macondo/api/proto/macondo/macondo.proto";

// A GameRules is just the name of a board layout + the name of a letter
// distribution. These must exist in a database or file somewhere.
message GameRules {
  string board_layout_name = 1;
  string letter_distribution_name = 2;
  // If blank, variant is classic, otherwise it could be some other game
  // (a is worth 100, dogworms, etc.)
  string variant_name = 3;
}

enum GameMode { REAL_TIME = 0; CORRESPONDENCE = 1; }

enum RatingMode { RATED = 0; CASUAL = 1; }

// Game initialization
// Both SeekRequest and MatchRequest encapsulate a more general GameRequest
// object Both these types of requests can be sent from client to server or
// vice-versa.

message GameRequest {
  string lexicon = 1;
  GameRules rules = 2;
  int32 initial_time_seconds = 3;
  int32 increment_seconds = 4;
  macondo.ChallengeRule challenge_rule = 5;
  GameMode game_mode = 6;
  RatingMode rating_mode = 7;
  string request_id = 8;
  int32 max_overtime_minutes = 9;
  bool player_vs_bot = 10;
  string original_request_id = 11;
}

// A MatchUser requests or receives a match via a seek or a match request.
message MatchUser {
  // user_id is the database, or anonymous, ID of the user.
  string user_id = 1;
  // relevant_rating is the rating of the user, for the relevant seek mode.
  string relevant_rating = 2;
  // if is_anonymous, backend won't bother to look up the user in the DB.
  bool is_anonymous = 3;
  // display_name is the display username of the user (could be real name too)
  string display_name = 4;
}

// Message types

// In order to make socket messages as small and simple as possible,
// we should include the message type with the socket message.
// Whenever we add a new client <-> server socket message type,
// add it to this list.
enum MessageType {
  SEEK_REQUEST = 0; MATCH_REQUEST = 1; SOUGHT_GAME_PROCESS_EVENT = 2;
  CLIENT_GAMEPLAY_EVENT = 3;
  SERVER_GAMEPLAY_EVENT = 4;
  GAME_ENDED_EVENT = 5;
  GAME_HISTORY_REFRESHER = 6;
  ERROR_MESSAGE = 7;
  NEW_GAME_EVENT = 8;
  SERVER_CHALLENGE_RESULT_EVENT = 9;
  SEEK_REQUESTS = 10;
  MATCH_REQUEST_CANCELLATION = 11;
  TIMED_OUT = 13;
  GAME_META_EVENT = 15;
  ACTIVE_GAMES = 16;
  GAME_DELETION = 17;
  MATCH_REQUESTS = 18;
  DECLINE_MATCH_REQUEST = 19;
  CHAT_MESSAGE = 20;
  CHAT_MESSAGES = 21;
  USER_PRESENCE = 22;
  USER_PRESENCES = 23;
  SERVER_MESSAGE = 24;
  READY_FOR_GAME = 25;
  LAG_MEASUREMENT = 26;
  TOURNAMENT_GAME_ENDED_EVENT = 27;
  REMATCH_STARTED = 28;

  // Add more events here. The total number of events should fit in a byte.
  // We should definitely not be using anywhere close to 255 events, and
  // in order to enforce that I'll be forcing the event type header to just be
  // a byte long.
  USER_ACTIVITY = 36;
  USER_ACTIVITIES = 37;
  CHAT_CHANNELS = 38;
}

// GameMeta is meant to be a quick summary of a game for watching purposes,
// for display in a list in the lobby e.g.
// Note: this is very similar to the GameInfoResponse in game_service.proto,
// but it is annoying to combine them now. The latter has some more info.
message GameMeta {
  message UserMeta {
    string relevant_rating = 1;
    string display_name = 2;
  }
  repeated UserMeta users = 1;
  GameRequest game_request = 2;
  string id = 3; // the game ID
}

message GameDeletion { string id = 1; }

message LagMeasurement { int32 lag_ms = 1; }

// Bi-directional messages

message ChatMessage {
  string username = 1;
  string channel = 2;
  string message = 3;
  // timestamp is in milliseconds!
  int64 timestamp = 4;
  string user_id = 5;
}

message ChatMessages { repeated ChatMessage messages = 1; }

message UserPresence {
  string username = 1;
  string user_id = 2;
  string channel = 3;
  bool is_anonymous = 4;
  bool deleting = 5;
}

message UserPresences { repeated UserPresence presences = 1; }

message UserActivity {
  enum Type {
    // IDLE - chilling, not playing a game, could be chatting/etc.
    IDLE = 0; PLAYING_OMGWORDS = 1;
    // IDLE becomes AWAY after some time
    AWAY = 2;
    // LEFT_SITE would get sent, but likely not stored.
    ENTERED_SITE = 3;
    LEFT_SITE = 4;
  }

  string user_id = 1;
  Type activity_type = 2;
  // corresponds to the activity_type. For example if playing omgwords,
  // meta would be the game ID.
  string meta = 3;
}

message UserActivities { repeated UserActivity activities = 1; }

message SeekRequest {
  GameRequest game_request = 1;
  MatchUser user = 2;
  int32 minimum_rating = 3;
  int32 maximum_rating = 4;
  // connection_id is the websocket ID via which this game was requested.
  string connection_id = 5;
}

message MatchRequest {
  GameRequest game_request = 1;
  MatchUser user = 2;
  MatchUser receiving_user = 3;
  // rematch_for is the game ID that this Match Request is a rematch for (empty
  // if it isn't a rematch)
  string rematch_for = 4;
  // connection_id is the websocket ID via which this game was requested.
  string connection_id = 5;
  // If this match request is part of a tournament, it is treated in a special
  // way.
  string tournament_id = 6;
}

message ReadyForGame { string game_id = 1; }

// A SoughtGameProcessEvent gets sent when a match request (or seek request)
// get accepted (from client to server), or canceled -- when sent from server to
// client.
message SoughtGameProcessEvent { string request_id = 1; }

// Server to client messages:
// When a Seeker cancels their outgoing match request:
message MatchRequestCancellation { string request_id = 1; }

// SeekRequests sends all open seek requests.
message SeekRequests { repeated SeekRequest requests = 1; }
message MatchRequests { repeated MatchRequest requests = 1; }

message ActiveGames { repeated GameMeta games = 1; }

// The server will send back a ServerGameplayEvent to a ClientGameplayEvent.
// The server will also send these asynchronously for opponent gameplay
// events.
message ServerGameplayEvent {
  macondo.GameEvent event = 1;
  string game_id = 2;
  string new_rack = 3;
  int32 time_remaining = 4;
  macondo.PlayState playing = 5;
  string user_id = 6; // the event has the nickname, but not the userid.
}

// ServerGameplayEvents is a list of consecutive events. Sometimes we send
// more than one event and don't want to send them separately.
// message ServerGameplayEvents { repeated ServerGameplayEvent events = 1; }

// The server will send back a challenge result event only in the case of
// a challenge. In all other cases, the server will send back a
// ServerGameplayEvent, and the front-end can
// A ServerChallengeResultEvent is sent back along with a GameHistoryRefresher
// when there is a challenge, instead of trying to reconstruct and send the
// right incremental events. The reason is that the logic is complex and
// has many special cases, and is already fully implemented in Macondo.
// We don't wish to re-implement it both in this repo's backend and frontend.
message ServerChallengeResultEvent {
  bool valid = 1;
  string challenger = 2;
  macondo.ChallengeRule challenge_rule = 3;
}

// GameEndedEvent is always sent from the server to both clients.
message GameEndedEvent {
  map<string, int32> scores = 1;
  map<string, int32> new_ratings = 2;
  GameEndReason end_reason = 3;
  // The winner is not always the highest scoring player; one player can
  // time out. The end_reason should make it clear what happened.
  string winner = 4;
  string loser = 5;
  // If it was a tie, the winner and loser above can be interchanged.
  bool tie = 6;
  // Time that the game ended
  int64 time = 7;

  map<string, int32> rating_deltas = 8;
  // Send the full game history again. This will have rack information in it.
  macondo.GameHistory history = 9;
}

// TournamentGameEndedEvent gets sent to a tournament channel when a game is
// over. This shows tournament results right in the tournament lobby in real
// time.
message TournamentGameEndedEvent {

  message Player {
    string username = 1;
    int32 score = 2;
    TournamentGameResult result = 3;
  }

  string game_id = 1;
  repeated Player players = 2;
  GameEndReason end_reason = 3;
  // Time that the game ended
  int64 time = 4;
}

// RematchStartedEvent gets sent to a game for which there is a rematch.
// It notifies that observers of the game that a rematch has started.
message RematchStartedEvent {
  // rematch_game_id is the new game ID.
  string rematch_game_id = 1;
}

// A GameHistoryRefresher is sent to both players when the game starts,
// and any observers at the time that they begin observing. It can also be sent
// to a player who reconnects in the middle of a game.
message GameHistoryRefresher {
  // The history contains all the moves, points, as well as the last known racks
  // of each player. It also implicitly contains whose turn it is at the moment,
  // by the events / turns in the history.
  // The front-end is responsible for showing all this information in a nice
  // format.
  // Note: the racks of each player should not be sent to both players, only
  // to observers. The back-end will have to be smart enough to overwrite
  // this information with a blank string before sending it. It might not
  // even be that great of a big deal, as I'm sure people can devise other ways
  // to cheat, but shrug.
  macondo.GameHistory history = 1;
  // These represent how much time each player has remaining on their clock
  // as of the "refresher", in milliseconds.
  // player1 is the player who is listed first in the game history, regardless
  // of whether they went first.
  int32 time_player1 = 2;
  int32 time_player2 = 3;
  int32 max_overtime_minutes = 4;
}

// A NewGameEvent gets sent from the server to the involved clients when a new
// game is about to begin. It should follow a SoughtGameProcessEvent.
message NewGameEvent {
  string game_id = 1;
  // These are the connection IDs of the requesting and accepting users.
  string requester_cid = 2;
  string accepter_cid = 3;
}

message ErrorMessage {
  string message = 1;
  // Maybe codes or something else in the future.
}

message ServerMessage { string message = 1; }

// Client-to-server messages

// Gameplay

enum GameEndReason {
  // NONE: the game has not yet ended!
  NONE = 0;
  // TIME: one person timed out (and lost)
  TIME = 1;
  // WENT_OUT: game ended regularly, with one person having zero tiles on their
  // rack.
  STANDARD = 2;
  // 6 consecutive zeroes ends the game.
  CONSECUTIVE_ZEROES = 3;
  RESIGNED = 4;
  // Aborted games are aborted by mutual agreement.
  ABORTED = 5;
  TRIPLE_CHALLENGE = 6;
  // CANCELLED means the game never started. Game start signal was not sent.
  CANCELLED = 7;
  // FORCE_FORFEIT is a way to force an opponent to take a loss if they left a
  // game early without resigining.
  FORCE_FORFEIT = 8;
}

// We encapsulate the game event here from the client's point of view. The
// server will validate that the event is permissible.
message ClientGameplayEvent {
  enum EventType {
    TILE_PLACEMENT = 0; PASS = 1; EXCHANGE = 2; CHALLENGE_PLAY = 3; RESIGN = 4;
  }

  EventType type = 1;
  string game_id = 2;
  // position coordinates, like H8 or G10. Only matters for TILE_PLACEMENT.
  string position_coords = 3;
  // tiles that are being played (or exchanged). The `.` character is used
  // for thru, and lowercase characters are used for blanks.
  string tiles = 4;
}

message TimedOut {
  string game_id = 1;
  string user_id = 2;
}

// When a Receiver declines a Seeker:
message DeclineMatchRequest { string request_id = 1; }

// Tournaments

enum TournamentGameResult {
  // NO_RESULT: the game is not over
  NO_RESULT = 0; WIN = 1; LOSS = 2; DRAW = 3; BYE = 4; FORFEIT_WIN = 5;
  FORFEIT_LOSS = 6;
  // ELIMINATED: player is eliminated in a bracket tournament
  ELIMINATED = 7;
}

// Communication

// When we go to a new path in our SPA, we send a JoinPath. When we leave the
// path, we send an Unjoin realm. d
message JoinPath { string path = 1; }

message UnjoinRealm {}
